[gd_scene load_steps=10 format=3 uid="uid://c56q8m3q4xkh8"]

[ext_resource type="Script" path="res://scripts/tool_tip_box.gd" id="1_t3ylk"]
[ext_resource type="Texture2D" uid="uid://bapsdg8yf4gya" path="res://assets/environment.png" id="2_ny1sh"]
[ext_resource type="Texture2D" uid="uid://b7lwthxq5rwx2" path="res://assets/economy.png" id="3_i0mb1"]
[ext_resource type="Texture2D" uid="uid://b3x5k15x6o008" path="res://assets/flash.png" id="4_cncvo"]
[ext_resource type="Texture2D" uid="uid://bicd7kncqjm4p" path="res://assets/happiness.png" id="5_thu77"]

[sub_resource type="Animation" id="Animation_ptps6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_v8p2t"]
resource_name = "showToolTipBox"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0666667, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dwuwm"]
_data = {
"RESET": SubResource("Animation_ptps6"),
"showToolTipBox": SubResource("Animation_v8p2t")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bp28b"]
size = Vector2(379, 360)

[node name="ToolTipBox" type="Panel"]
physics_interpolation_mode = 0
modulate = Color(1, 1, 1, 0)
z_index = 100
texture_filter = 6
offset_right = 214.0
offset_bottom = 300.0
mouse_filter = 1
script = ExtResource("1_t3ylk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dwuwm")
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 812.0
offset_bottom = 428.0
scale = Vector2(0.25, 0.25)
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2

[node name="Name" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 56
text = "Name"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_ny1sh")
expand_mode = 2

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Environment" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 52
text = "Environment"

[node name="RepairLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/Environment"]
layout_mode = 2
offset_left = 343.0
offset_right = 652.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 52
horizontal_alignment = 2

[node name="VSeparator3" type="VSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("3_i0mb1")
expand_mode = 2

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Money" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 52
text = "Money"

[node name="RepairLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer2/Money"]
layout_mode = 0
offset_left = 329.0
offset_right = 654.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 52
horizontal_alignment = 2

[node name="VSeparator2" type="VSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("4_cncvo")
expand_mode = 2

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Electricity" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 52
text = "Electricity"

[node name="RepairLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer3/Electricity"]
layout_mode = 0
offset_left = 329.0
offset_right = 654.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 52
horizontal_alignment = 2

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="ScrollContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
texture = ExtResource("5_thu77")
expand_mode = 2

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Happiness" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 52
text = "Happiness"

[node name="RepairLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer4/Happiness"]
layout_mode = 0
offset_left = 329.0
offset_right = 654.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 52
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 120.0
offset_right = 214.0
offset_bottom = 295.0

[node name="FunFactTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 14
text = "Did You Know?"

[node name="FunFact" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(107, 100)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 10
text = "Fun facts will appear here! "
autowrap_mode = 3

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 135.0
offset_top = 110.0
offset_right = 510.0
offset_bottom = 270.0
scale = Vector2(0.2, 0.2)
theme_override_font_sizes/font_size = 64
text = "Repair"

[node name="MouseBlocker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseBlocker"]
position = Vector2(112.5, 134)
shape = SubResource("RectangleShape2D_bp28b")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="MouseBlocker" to="." method="_on_mouse_blocker_mouse_entered"]
[connection signal="mouse_exited" from="MouseBlocker" to="." method="_on_mouse_blocker_mouse_exited"]
